--- a/比特币白皮书：一种点对点的电子现金系统.md
+++ b/比特币白皮书：一种点对点的电子现金系统.md
@@ -5,7 +5,7 @@
 1. 我们定义，一枚电子货币（an electronic coin）是这样的一串数字签名：每一位所有者通过对前一次交易和下一位拥有者的公钥(public key)签署一个随机散列的数字签名，并将这个签名附加在这枚电子货币的末尾，电子货币就发送给了下一位所有者。而收款人通过对签名进行校验，就能够验证该链条的所有者。
 
 <div align = "center">
-<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/%E7%94%B5%E5%AD%90%E8%B4%A7%E5%B8%81%E7%AD%BE%E5%90%8D.png" width="500" height="400"/>
+<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/%E7%94%B5%E5%AD%90%E8%B4%A7%E5%B8%81%E7%AD%BE%E5%90%8D.png" />
     </div>
     
 该过程的问题在于，收款人将难以校验之前的某位所有者，是否对这枚电子货币进行了双重支付。通常的解决方案是就是引入信得过的第三方权威，或者类似于造币厂的机构，来对每一笔交易进行校验，以防止双重支付。在每一笔交易结束后，这枚电子货币就要被造币厂回收，而造币厂将发行一枚新的电子货币，而只有造币厂直接发行的电子货币，才能算作有效，这样就可以防止双重支付。可是该解决方案的问题在于，整个货币系统的命运完全依赖于运作造币厂的公司，因为每一笔交易都要经过该造币厂的确认，而该造币厂就好比是一家银行。
@@ -17,7 +17,7 @@
 时间戳服务器通过对以区块(block)形式存在的一组数据实施随机散列而加上时间戳，并将该随机散列进行广播，就想在新闻或者世界新闻组网络(Usenet)的发帖一样。显然，该时间戳能够证实特定数据必然于某特定时间是的确存在的，因为只有在该时刻存在了才能获取相应的随机散列值。每个时间戳应当将前一个时间戳纳入其随机散列值中，每一个随后的时间戳都对之前的一个时间戳进行增强(reinforcing)，这样就形成了一条链条。
 
 <div align = "center">
-<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/%E6%97%B6%E9%97%B4%E6%88%B3%E6%9C%8D%E5%8A%A1%E5%99%A8.png" width="500" height="400"/>
+<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/%E6%97%B6%E9%97%B4%E6%88%B3%E6%9C%8D%E5%8A%A1%E5%99%A8.png" />
     </div>
 
 
@@ -53,7 +53,7 @@
 如果最近的交易已经被纳入了足够多的区块中，那么就可以丢弃该交易之前的数据，以回收硬盘空间。为了同时确保不损害区块的随机散列值，交易信息被随机散列时，被构建成一种Merkle树形态，使得只有根(root)被纳入了区块的随机散列值。通过该树的分支拔除(stubbing)的方法，老区块就能被压缩。而内部的随机散列值是不必保存的。
 
 <div align = "center">
-<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/MerkleTree.png" width="500" height="400"/>
+<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/MerkleTree.png"/>
     </div>
 
 不含交易信息的区块头(Block header)大小仅由80字节。如果我们设定区块生成速率为每10分钟一个，那么每一年产生的数据位4.2MB。（80bytes * 6 * 24 * 365 = 4.2MB）。2008年，PC系统通常的内存容量为2GB，按照摩尔定律的预言，即使将全部的区块头存储在内存之中都不是问题。
@@ -63,7 +63,7 @@
 在不运行完整网络节点的情况下，也能够对支付进行验证。一个用户需要保留最长的工作量证明链条的区块头的拷贝，它可以不断向网络发起询问，直到它确定自己拥有最长的链条，并能够通过merkle的分支通向它被加上时间戳并纳入区块的那次交易。节点想要自行检验该交易的有效性原本是不可能的，但通过追溯到链条的某个位置，它就能看到某个节点曾经接受过它，并且于其后追加的区块也进一步证明了全网曾经接受了它。
 
 <div align = "center">
-<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/%E6%94%AF%E4%BB%98%E7%A1%AE%E8%AE%A4.png" width="500" height="400"/>
+<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/%E6%94%AF%E4%BB%98%E7%A1%AE%E8%AE%A4.png"/>
     </div>
     
 当此情形，只要诚实的节点控制了网络，验证机制就是可靠地。但是，当全网被一个计算力占优的攻击者攻击时，将变得较为脆弱。因为网络节点能够自行确认交易的有效性，只要攻击者能够持续地保持计算力优势，简化的机制就会被攻击者焊接的(fabricated)交易欺骗。那么一个可行的策略是，只要他们发现了一个无效的区块，就立即发出警报，收到警报的用户将立即开始下载被警告有问题的区块或交易的完整信息，以便对信息的不一致进行判定。对于日常会发生大量收付的商业机构，可能仍会希望运行他们的完整节点，以保持较大的独立完全性和校验的快速性。
@@ -76,7 +76,7 @@
 ## 隐私(Privacy)
 
 <div align = "center">
-<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/%E9%9A%90%E7%A7%81%E6%A8%A1%E5%9E%8B.png" width="500" height="400"/>
+<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/%E9%9A%90%E7%A7%81%E6%A8%A1%E5%9E%8B.png"/>
     </div>
 
 传统的造币厂模型为交易的参与者提供了一定程度的隐私保护，因为试图向可信任的第三方索取交易信息是严格限制的。但是如果将交易信息向全网进行广播，就意味着这样的方法失效了。但是隐私依然可以得到保护：将公钥保持为匿名。公众得知的信息仅仅是某个人将一定数量的货币发送给了另一个人，但是难以将该交易同特定的人联系在一起，也就是说，公众难以确定，这些人究竟是谁。这同股票交易所发布的信息是类似的，股票交易发生的时间，交易量是记录在案且可供查询的，但是交易双方的身份信息却不予透露。
