比特币白皮书

--- a/比特币白皮书：一种点对点的电子现金系统.md
+++ b/比特币白皮书：一种点对点的电子现金系统.md
@@ -5,7 +5,7 @@
 1. 我们定义，一枚电子货币（an electronic coin）是这样的一串数字签名：每一位所有者通过对前一次交易和下一位拥有者的公钥(public key)签署一个随机散列的数字签名，并将这个签名附加在这枚电子货币的末尾，电子货币就发送给了下一位所有者。而收款人通过对签名进行校验，就能够验证该链条的所有者。
 
 <div align = "center">
-<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/%E7%94%B5%E5%AD%90%E8%B4%A7%E5%B8%81%E7%AD%BE%E5%90%8D.png" />
+<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/%E7%94%B5%E5%AD%90%E8%B4%A7%E5%B8%81%E7%AD%BE%E5%90%8D.png"/>
     </div>
     
 该过程的问题在于，收款人将难以校验之前的某位所有者，是否对这枚电子货币进行了双重支付。通常的解决方案是就是引入信得过的第三方权威，或者类似于造币厂的机构，来对每一笔交易进行校验，以防止双重支付。在每一笔交易结束后，这枚电子货币就要被造币厂回收，而造币厂将发行一枚新的电子货币，而只有造币厂直接发行的电子货币，才能算作有效，这样就可以防止双重支付。可是该解决方案的问题在于，整个货币系统的命运完全依赖于运作造币厂的公司，因为每一笔交易都要经过该造币厂的确认，而该造币厂就好比是一家银行。
@@ -17,7 +17,7 @@
 时间戳服务器通过对以区块(block)形式存在的一组数据实施随机散列而加上时间戳，并将该随机散列进行广播，就想在新闻或者世界新闻组网络(Usenet)的发帖一样。显然，该时间戳能够证实特定数据必然于某特定时间是的确存在的，因为只有在该时刻存在了才能获取相应的随机散列值。每个时间戳应当将前一个时间戳纳入其随机散列值中，每一个随后的时间戳都对之前的一个时间戳进行增强(reinforcing)，这样就形成了一条链条。
 
 <div align = "center">
-<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/%E6%97%B6%E9%97%B4%E6%88%B3%E6%9C%8D%E5%8A%A1%E5%99%A8.png" />
+<img src="https://raw.githubusercontent.com/lengender/MarkdownPhotos/master/%E6%97%B6%E9%97%B4%E6%88%B3%E6%9C%8D%E5%8A%A1%E5%99%A8.png"/>
     </div>
 
 
@@ -83,36 +83,8 @@
 
 作为额外的预防措施，使用者可以让每次交易都生成一个新的地址，以确保这些交易不会被追溯到一个共同的所有者。但是由于并行输入的存在，一定程度上的追溯还是不可避免的，因为并行输入表明这些货币都属于同一个所有者，此时的风险在于，如果某个人的某一个公钥确认属于他，那么就可以追溯此人的其他很多交易。
 
+## 参考
+[比特币白皮书][1]
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  [1]: http://www.8btc.com/wiki/bitcoin-a-peer-to-peer-electronic-cash-system
